# cmakedemo

./: .drone.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: mingw-ci.yml  mingw64-ci.yml  msys2.yml  ubuntu18.yml  ubuntu20.yml  vs16-ci.yml  vs16-clang-ci.yml  vs16-ninja-ci.yml
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  test.cpp
